Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-138174

Lightning Viewer: runtime warnings

    XMLWordPrintable

Details

    • macOS
    • 409769ce8 (dev), f6fa7e35a (6.10), 560bacbc9 (dev), 1957edf18 (6.10), a9b55ad83 (6.9), 06be86684 (tqtc/lts-6.8)

    Description

      The Lightning Viewer application example in Qt 6.10 produces some warnings at startup:

      qt.qpa.fonts: Populating font family aliases took 102 ms. Replace uses of missing font family "SF Pro Display" with one that exists to avoid this cost. 
      qrc:/qt/qml/LightningViewer/MapView.qml:24:9: Unable to assign [undefined] to QFlags<QDeclarativePositionSource::PositioningMethod>
      

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-138174
          # Subject Branch Project Status CR V

          Activity

            People

              kkohne Kai Köhne
              kkohne Kai Köhne
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated: