qmltyperegistrar: Manually register names for Q_ENUMS

Flags declared with Q_FLAGS lack the methods for properly extracting the
typedef'd name. We need to manually register the typedef.

Amends commit 8bf5aae19b77b618f3f7a55a59e87c8a319475a8.

Pick-to: 6.8
Fixes: QTBUG-138174
Change-Id: I7c373f4d810a0c9a5590f39cc629015662a69ed4
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>
(cherry picked from commit 560bacbc9302b9622e8cabaf8dde2b3348480b3d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 1957edf1889eaca4f5dd4315ac9a206871b1e7e0)