src/qmltyperegistrar/qqmltyperegistrar.cpp
@@ -478,11 +478,11 @@ void QmlTypeRegistrar::write(QTextStream &output, QAnyStringView outFileName) co
         const auto enums = target.native.enums();
         for (const auto &enumerator : enums) {
             output << uR"(
-    QMetaType::fromType<%1::%2>().id();)"_s.arg(
+    qmlRegisterEnum<%1::%2>("%1::%2");)"_s.arg(
                     targetName, enumerator.name.toString());
             if (!enumerator.alias.isEmpty()) {
                 output << uR"(
-    QMetaType::fromType<%1::%2>().id();)"_s.arg(
+    qmlRegisterEnum<%1::%2>("%1::%2");)"_s.arg(
                         targetName, enumerator.alias.toString());
             }
         }
