tests/auto/qml/qmlcppcodegen/data/oldEnum.qml
@@ -1,0 +1,7 @@
+pragma Strict
+import TestTypes
+import QtQml
+
+OldEnum {
+    foos: OldEnum.Bar
+}
